--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "use-onnx-web-session",
+  "name": "use-onnx-web",
   "author": "Zack Davis <zackrdavis@gmail.com>",
   "version": "1.0.0",
   "description": "React hook for inference with ONNX-Runtime web",
   "license": "MIT",
-  "repository": "zackrdavis/use-onnx-web-session",
+  "repository": "zackrdavis/use-onnx-web",
   "keywords": [
     "react",
     "hooks",
